--- a/server/index.html
+++ b/server/index.html
@@ -1,13 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Space work</title>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-<link href="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css" rel="stylesheet" />
-<link rel="stylesheet" href="https://nearby-bundles.s3.us-east-2.amazonaws.com/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
+  <title>Nearby-Service</title>
+  <link rel="stylesheet" href="https://nearby-bundles.s3.us-east-2.amazonaws.com/styles.css">
 </head>
 <body>
   <div class="proxy-container">
@@ -20,6 +19,7 @@
       </div>
     </div>
   </div>
+
 </body>
 <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
@@ -27,6 +27,6 @@
   integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
   crossorigin="anonymous">
 </script>
+<script defer="defer" id="global"></script>
 <script src="https://nearby-bundles.s3.us-east-2.amazonaws.com/nearby.js"></script>
 </html>
-
