--- a/server/index.html
+++ b/server/index.html
@@ -28,5 +28,5 @@
   crossorigin="anonymous">
 </script>
 <script defer="defer" id="global"></script>
-<script src="https://nearby-bundles.s3.us-east-2.amazonaws.com/nearby.js"></script>
+<script defer="defer" src="https://nearby-bundles.s3.us-east-2.amazonaws.com/nearby.js"></script>
 </html>
